--- a/src/RhythmUI/RhythmUI - Backup.csproj
+++ b/src/RhythmUI/RhythmUI - Backup.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-		<TargetFrameworks>net48</TargetFrameworks>
-		<!--<TargetFrameworks>net8.0-windows</TargetFrameworks>-->
+   <PropertyGroup>
+       <!--<TargetFramework>net48</TargetFramework>-->
+		<TargetFramework>net8.0-windows</TargetFramework>
         <OutputType>Library</OutputType>
         <RootNamespace>Rhythm</RootNamespace>
         <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
@@ -13,8 +12,8 @@
         <Configurations>Debug R24;Debug R20;Debug R21;Debug R22;Debug R23;Debug R25;</Configurations>
         <Configurations>$(Configurations)Release R24;Release R20;Release R21;Release R22;Release R23;Release R25;</Configurations>
         <NoWarn>MSB3277;CS1591</NoWarn>
-    </PropertyGroup>
- <PropertyGroup Condition="$(Configuration.Contains('Debug R20'))">
+  </PropertyGroup>
+  <PropertyGroup Condition="$(Configuration.Contains('Debug R20'))">
         <DynamoVersion>2.3</DynamoVersion>
         <DynamoOutput>2.3</DynamoOutput>
         <RevitVersion>2020</RevitVersion>
@@ -79,8 +78,8 @@
 		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
     </PropertyGroup>
 	<PropertyGroup Condition="$(Configuration.Contains('Debug R24'))">
-        <DynamoVersion>2.18</DynamoVersion>
-        <DynamoOutput>2.18</DynamoOutput>
+        <DynamoVersion>2.19</DynamoVersion>
+        <DynamoOutput>2.19</DynamoOutput>
         <RevitVersion>2024</RevitVersion>
         <DefineConstants>$(DefineConstants);R24;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER</DefineConstants>
 		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
@@ -106,23 +105,23 @@
         <DefineConstants>$(DefineConstants);R25;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER;R25_OR_GREATER</DefineConstants>
 		<TargetFrameworkVersion>net8.0-windows</TargetFrameworkVersion>
     </PropertyGroup>
-	 <PropertyGroup>
+    <PropertyGroup>
         <DynVersion>$(DynamoVersion)</DynVersion>
         <BuildOutput>$(DynamoOutput)</BuildOutput>
         <PublishSingleFile>true</PublishSingleFile>
         <Copyright>MIT</Copyright>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageTags>dynamo</PackageTags>
-        <FolderPackages>$(Appdata)\Dynamo\Dynamo Revit\$(BuildOutput)\packages\RhythmRevit\</FolderPackages>
+        <FolderPackages>$(Appdata)\Dynamo\Dynamo Revit\$(BuildOutput)\packages\Rhythm\</FolderPackages>
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
-        <Version>$(RevitVersion).3.1</Version>
-        <Description>Rhythm for Dynamo|Revit$(RevitVersion)</Description>
-        <FileVersion>$(RevitVersion).3.1</FileVersion>
-        <AssemblyVersion>$(RevitVersion).3.1</AssemblyVersion>
-        <Title>Rhythm for Dynamo|Revit$(RevitVersion)</Title>
-        <Product>Rhythm for Dynamo|Revit$(RevitVersion)</Product>
+        <Version>$(RevitVersion).12.1</Version>
+        <Description>Rhythm for Dynamo|Revit UI$(RevitVersion)</Description>
+        <FileVersion>$(RevitVersion).12.1</FileVersion>
+        <AssemblyVersion>$(RevitVersion).12.1</AssemblyVersion>
+        <Title>Rhythm for Dynamo|Revit UI$(RevitVersion)</Title>
+        <Product>Rhythm for Dynamo|Revit UI$(RevitVersion)</Product>
     </PropertyGroup>
-	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug R24|AnyCPU'">
+   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug R24|AnyCPU'">
 	   <Optimize>True</Optimize>
 	 </PropertyGroup>
 	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug R20|AnyCPU'">
@@ -158,10 +157,7 @@
 	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R25|AnyCPU'">
 	   <Optimize>True</Optimize>
 	 </PropertyGroup>
-	<ItemGroup Condition="'$(Configuration)|$(Platform)'!='Release R25|AnyCPU'">
-        <Reference Include="System.Windows" />
-    </ItemGroup>
-	<ItemGroup>
+	 <ItemGroup>
 	    <PackageReference Include="DynamoVisualProgramming.Revit" Version="$(DynVersion).*" />
         <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="$(DynVersion).*" />
         <PackageReference Include="Prism" Version="4.1.0.0" />
@@ -172,8 +168,10 @@
         <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 		<PackageReference Include="Revit_All_Main_Versions_API_x64" Version="$(RevitVersion).*-*" />
         <PackageReference Include="DynamoVisualProgramming.Core" Version="$(DynVersion).*" />
-	</ItemGroup>
-	<ItemGroup Condition="'$(Configuration)|$(Platform)'!='Release R25|AnyCPU'">
+		<PackageReference Include="DynamoVisualProgramming.WpfUILibrary" Version="$(DynVersion).*" />
+		
+	 </ItemGroup>
+	  <ItemGroup Condition="'$(Configuration)|$(Platform)'!='Release R25|AnyCPU'">
 		<PackageReference Include="CommonServiceLocator" Version="1.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="NUnit" Version="2.6.3" />
@@ -187,21 +185,42 @@
         <PackageReference Include="System.Collections.Immutable" Version="8.0.0" />
         <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
     </ItemGroup>
+	
+	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release R20|AnyCPU' Or '$(Configuration)|$(Platform)'=='Debug R20|AnyCPU'">
+		<Reference Include="RhythmRevit">
+	      <HintPath>D:\repos_john\RhythmForDynamo\deploy\2020\RhythmRevit.dll</HintPath>
+        </Reference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release R21|AnyCPU' Or '$(Configuration)|$(Platform)'=='Debug R21|AnyCPU'">
+		<Reference Include="RhythmRevit">
+	      <HintPath>D:\repos_john\RhythmForDynamo\deploy\2021\RhythmRevit.dll</HintPath>
+        </Reference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release R22|AnyCPU' Or '$(Configuration)|$(Platform)'=='Debug R22|AnyCPU'">
+		<Reference Include="RhythmRevit">
+	      <HintPath>D:\repos_john\RhythmForDynamo\deploy\2022\RhythmRevit.dll</HintPath>
+        </Reference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release R23|AnyCPU' Or '$(Configuration)|$(Platform)'=='Debug R23|AnyCPU'">
+		<Reference Include="RhythmRevit">
+	      <HintPath>D:\repos_john\RhythmForDynamo\deploy\2023\RhythmRevit.dll</HintPath>
+        </Reference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release R24|AnyCPU' Or '$(Configuration)|$(Platform)'=='Debug R24|AnyCPU'">
+		<Reference Include="RhythmRevit">
+	      <HintPath>D:\repos_john\RhythmForDynamo\deploy\2024\RhythmRevit.dll</HintPath>
+        </Reference>
+	</ItemGroup>
+	
 	<Target Name="CopyFiles" AfterTargets="CoreBuild">
         <Message Text="Build Revit Version $(RevitVersion)" Importance="high" />
         <ItemGroup>
-            <AssemblyFiles Include="$(TargetDir)RhythmRevit.dll" />
+            <AssemblyFiles Include="$(TargetDir)RhythmUI.dll" />
             <AssemblyFiles Include="$(TargetDir)*.xml" />
-            
-            <!--            <XmlCustomization Include="$(SolutionDir)docs\*.xml"/>-->
-            <!--      <DyfFiles Include="$(SolutionDir)docs\dyf\*.*" />-->
         </ItemGroup>
         <Message Text="Copying From $(TargetDir) To $(FolderPackages)" Importance="high" />
-
         <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(ProjectDir)..\..\deploy\$(RevitVersion)" />
-
-        <!--        <Copy SourceFiles="@(DyfFiles)" DestinationFolder="$(FolderPackages)dyf"/>-->
         <Message Text="Copied Completed" Importance="high" />
-
     </Target>
+	
 </Project>
