--- a/src/RhythmViewExtension/RhythmViewExtension.csproj
+++ b/src/RhythmViewExtension/RhythmViewExtension.csproj
@@ -1,17 +1,32 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-		<TargetFrameworks>net8.0-windows</TargetFrameworks>
+		<TargetFrameworks>net48</TargetFrameworks>
+		<!--<TargetFrameworks>net8.0-windows</TargetFrameworks>-->
         <ProjectGuid>{0B4B05E9-C1A8-4767-8307-98914BCC6842}</ProjectGuid>
         <UseWPF>true</UseWPF>
+		<UseWindowsForms>true</UseWindowsForms>
 		<OutputType>Library</OutputType>
         <RootNamespace>RhythmViewExtension</RootNamespace>
         <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
-		<UseWindowsForms>true</UseWindowsForms>
         <PlatformTarget>x64</PlatformTarget>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-		<Configurations>Debug R25;</Configurations>
-        <Configurations>$(Configurations)Release R25;</Configurations>
+		<Configurations>Debug R24;Debug R25;</Configurations>
+        <Configurations>$(Configurations)Release R24;Release R25;</Configurations>
   </PropertyGroup>
+  <PropertyGroup Condition="$(Configuration.Contains('Debug R24'))">
+        <DynamoVersion>2.19</DynamoVersion>
+        <DynamoOutput>2.19</DynamoOutput>
+        <RevitVersion>2024</RevitVersion>
+        <DefineConstants>$(DefineConstants);R24;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER</DefineConstants>
+		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+    </PropertyGroup>
+    <PropertyGroup Condition="$(Configuration.Contains('Release R24'))">
+        <DynamoVersion>2.19</DynamoVersion>
+        <DynamoOutput>2.19</DynamoOutput>
+        <RevitVersion>2024</RevitVersion>
+        <DefineConstants>$(DefineConstants);R24;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER</DefineConstants>
+		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+    </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.Contains('Debug R25'))">
         <DynamoVersion>3.0</DynamoVersion>
         <DynamoOutput>3.0</DynamoOutput>
@@ -68,10 +83,9 @@
     <EmbeddedResource Include="Revit\25\RhythmUI.dll" />
   </ItemGroup>
   <ItemGroup>
-     <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="$(DynVersion).*" />
-    <PackageReference Include="DynamoVisualProgramming.DynamoServices" Version="$(DynVersion).*" />
+
     <PackageReference Include="DynamoVisualProgramming.WpfUILibrary" Version="$(DynVersion).*" />
-    <PackageReference Include="DynamoVisualProgramming.ZeroTouchLibrary" Version="$(DynVersion).*" />
+
   </ItemGroup>
  
   <Target Name="CopyFiles" AfterTargets="CoreBuild">
