--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-     <TargetFramework>net48</TargetFramework>
-	 <!--<TargetFramework>net8.0-windows</TargetFramework>-->
+     <!--<TargetFramework>net48</TargetFramework>-->
+	 <TargetFramework>net8.0-windows</TargetFramework>
         <OutputType>Library</OutputType>
         <RootNamespace>Rhythm</RootNamespace>
         <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
