--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-     <!--<TargetFramework>net48</TargetFramework>-->
-	 <TargetFramework>net8.0-windows</TargetFramework>
+     <TargetFramework>net48</TargetFramework>
+	 <!--<TargetFramework>net8.0-windows</TargetFramework>-->
         <OutputType>Library</OutputType>
         <RootNamespace>Rhythm</RootNamespace>
         <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
@@ -196,11 +196,6 @@
    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
    <PackageReference Include="Markov" Version="2.0.0" />
     </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Accord" Version="3.8.0" />
-    <PackageReference Include="Accord.MachineLearning" Version="3.8.0" />
-    <PackageReference Include="Accord.Math" Version="3.8.0" />
-  </ItemGroup>
 	<Target Name="CopyFiles" AfterTargets="CoreBuild">
         <Message Text="Build Revit Version $(RevitVersion)" Importance="high" />
         <ItemGroup>
