Fix for Dynamo Core to find the DLLs

--- a/src/RhythmViewExtension/Properties/launchSettings.json
+++ b/src/RhythmViewExtension/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "RhythmView": {
       "commandName": "Executable",
-      "executablePath": "C:\\Users\\johnpierson\\Desktop\\Autodesk\\DynamoCoreRuntime2.19.3\\DynamoSandbox.exe"
+      "executablePath": "C:\\Users\\piersoj\\OneDrive - Autodesk\\Desktop\\Software\\DynamoBuilds\\DynamoCoreRuntime3.6.1\\DynamoSandbox.exe"
     }
   }
 }
